--- a/student-service/src/main/resources/templates/project-choose-fail.html
+++ b/student-service/src/main/resources/templates/project-choose-fail.html
@@ -17,7 +17,9 @@
     <div class="layui-body">
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
-            <h2>[[${msg}]]</h2>
+            <h1>[[${msg}]]</h1>
+            <br>
+            <h2><a th:href="@{/project/choose}">点此重新选题</a></h2>
         </div>
     </div>
 
