--- a/teacher-service/src/main/resources/templates/project-file-manage-student.html
+++ b/teacher-service/src/main/resources/templates/project-file-manage-student.html
@@ -17,7 +17,7 @@
     <div class="layui-body">
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
-            <h1>我上传的过程文档</h1>
+            <h1>我上传的文档</h1>
             <br>
             <br>
 
@@ -38,8 +38,6 @@
                             <div class="layui-btn-group">
                                 <a class="layui-btn layui-btn-warm layui-btn-sm"
                                    th:href="@{/project/stage/file/download/}+${projectFile.getPfId()}">点击下载</a>
-                                <a class="layui-btn layui-btn-danger layui-btn-sm"
-                                   th:href="@{/project/stage/file/delete/}+${projectFile.getPfId()}">删除文件</a>
                             </div>
                         </td>
                     </tr>
@@ -66,8 +64,6 @@
                             <div class="layui-btn-group">
                                 <a class="layui-btn layui-btn-warm layui-btn-sm"
                                    th:href="@{/project/stage/file/download/}+${projectFile.getPfId()}">点击下载</a>
-                                <a class="layui-btn layui-btn-danger layui-btn-sm"
-                                   th:href="@{/project/stage/file/delete/}+${projectFile.getPfId()}">删除文件</a>
                             </div>
                         </td>
                     </tr>
@@ -94,8 +90,6 @@
                             <div class="layui-btn-group">
                                 <a class="layui-btn layui-btn-warm layui-btn-sm"
                                    th:href="@{/project/stage/file/download/}+${projectFile.getPfId()}">点击下载</a>
-                                <a class="layui-btn layui-btn-danger layui-btn-sm"
-                                   th:href="@{/project/stage/file/delete/}+${projectFile.getPfId()}">删除文件</a>
                             </div>
                         </td>
                     </tr>
@@ -122,8 +116,6 @@
                             <div class="layui-btn-group">
                                 <a class="layui-btn layui-btn-warm layui-btn-sm"
                                    th:href="@{/project/stage/file/download/}+${projectFile.getPfId()}">点击下载</a>
-                                <a class="layui-btn layui-btn-danger layui-btn-sm"
-                                   th:href="@{/project/stage/file/delete/}+${projectFile.getPfId()}">删除文件</a>
                             </div>
                         </td>
                     </tr>
@@ -150,8 +142,6 @@
                             <div class="layui-btn-group">
                                 <a class="layui-btn layui-btn-warm layui-btn-sm"
                                    th:href="@{/project/stage/file/download/}+${projectFile.getPfId()}">点击下载</a>
-                                <a class="layui-btn layui-btn-danger layui-btn-sm"
-                                   th:href="@{/project/stage/file/delete/}+${projectFile.getPfId()}">删除文件</a>
                             </div>
                         </td>
                     </tr>
@@ -178,8 +168,6 @@
                             <div class="layui-btn-group">
                                 <a class="layui-btn layui-btn-warm layui-btn-sm"
                                    th:href="@{/project/stage/file/download/}+${projectFile.getPfId()}">点击下载</a>
-                                <a class="layui-btn layui-btn-danger layui-btn-sm"
-                                   th:href="@{/project/stage/file/delete/}+${projectFile.getPfId()}">删除文件</a>
                             </div>
                         </td>
                     </tr>
@@ -206,8 +194,6 @@
                             <div class="layui-btn-group">
                                 <a class="layui-btn layui-btn-warm layui-btn-sm"
                                    th:href="@{/project/stage/file/download/}+${projectFile.getPfId()}">点击下载</a>
-                                <a class="layui-btn layui-btn-danger layui-btn-sm"
-                                   th:href="@{/project/stage/file/delete/}+${projectFile.getPfId()}">删除文件</a>
                             </div>
                         </td>
                     </tr>
