--- a/teacher-service/src/main/resources/templates/project-file-manage.html
+++ b/teacher-service/src/main/resources/templates/project-file-manage.html
@@ -17,7 +17,7 @@
     <div class="layui-body">
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
-            <h1>我上传的过程文档</h1>
+            <h1>我上传的文档</h1>
             <br>
             <br>
 
