教师模块的推进

--- a/teacher-service/src/main/resources/templates/common.html
+++ b/teacher-service/src/main/resources/templates/common.html
@@ -32,8 +32,9 @@
             <li class="layui-nav-item">
                 <a class="" href="javascript:;">毕设课题管理</a>
                 <dl class="layui-nav-child">
-                    <dd><a th:href="@{/project}">查看我的课题</a></dd>
+                    <dd><a th:href="@{/project}">查看与撤销立题</a></dd>
                     <dd><a th:href="@{/project/stage}">阶段要求与文档上传</a></dd>
+                    <dd><a th:href="@{/project/score}">课题打分</a></dd>
                 </dl>
             </li>
             <li class="layui-nav-item">
