--- a/teacher-service/src/main/resources/templates/project-score.html
+++ b/teacher-service/src/main/resources/templates/project-score.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>我的课题</title>
+    <title>课题打分</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
 </head>
 
@@ -18,23 +18,13 @@
     <div class="layui-body">
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
-            <form class="layui-form layui-form-pane" th:action="@{/project/search}" method="post">
-                <div class="layui-form-item">
-                    <label class="layui-form-label">
-                        <button class="layui-btn layui-btn-fluid layui-btn-xs layui-btn-primary" lay-submit type="submit">搜索</button>
-                    </label>
-                    <div class="layui-input-block">
-                        <input type="text" name="searchString" required  lay-verify="required" placeholder="请输入搜索内容" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-            </form>
+            <h1>课题打分</h1>
+            <br>
             <table class="layui-table">
                 <thead>
                 <tr>
                     <th>课题题目</th>
-                    <th>课题类型</th>
-                    <th>课题性质</th>
-                    <th>课题状态</th>
+                    <th>课题分数</th>
                     <th>创建时间</th>
                     <th>操作</th>
                 </tr>
@@ -42,14 +32,14 @@
                 <tbody>
                 <tr th:each="project:${projects}">
                     <td th:text="${project.getTitle()}"></td>
-                    <td th:text="${project.getType()}"></td>
-                    <td th:text="${project.getNature()}"></td>
-                    <td th:text="${project.getStatus()}"></td>
+                    <td th:text="${project.getStatus().equals('待评分')}?'未评分':${project.getPoint()}"></td>
                     <td th:text="${#dates.format(project.getCreateTime(),'yyyy-MM-dd')}"></td>
                     <td>
                         <div class="layui-btn-group">
-                            <a class="layui-btn layui-btn-sm" th:href="@{/project/}+${project.getpId()}">详细信息</a>
-                            <a class="layui-btn layui-btn-sm layui-btn-danger" th:href="@{/project/cancel/}+${project.getpId()}">撤销立题</a>
+                            <a class="layui-btn layui-btn-sm layui-btn-normal"
+                               th:if="${project.getStatus().equals('待评分')}" th:href="@{/project/score/}+${project.getpId()}">开始评分</a>
+                            <a class="layui-btn layui-btn-sm layui-btn-danger"
+                               th:if="${project.getStatus().equals('已完成')}" th:href="@{/project/score/}+${project.getpId()}">修改分数</a>
                         </div>
                     </td>
                 </tr>
