项目收尾&教师模块的完成

--- a/teacher-service/src/main/resources/templates/common.html
+++ b/teacher-service/src/main/resources/templates/common.html
@@ -45,7 +45,7 @@
                 </dl>
             </li>
             <li class="layui-nav-item"><a th:href="@{/student}">我的学生</a></li>
-            <li class="layui-nav-item"><a th:href="@{/project/process}">过程记录表批改</a></li>
+            <li class="layui-nav-item"><a th:href="@{/project/process}">过程记录表批注</a></li>
             <li class="layui-nav-item"><a th:href="@{/update.html}">个人信息更新</a></li>
         </ul>
     </div>
