--- a/student-service/src/main/resources/templates/fail.html
+++ b/student-service/src/main/resources/templates/fail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>操作失败</title>
+    <title>操作无效</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
 </head>
 
