--- a/teacher-service/src/main/resources/templates/project-file-project.html
+++ b/teacher-service/src/main/resources/templates/project-file-project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>我的课题</title>
+    <title>过程文档管理</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
 </head>
 
