--- a/teacher-service/src/main/resources/templates/project-stage-manage-update.html
+++ b/teacher-service/src/main/resources/templates/project-stage-manage-update.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>修改学生信息</title>
+    <title>阶段管理</title>
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
 </head>
 <body>
