--- a/admin-service/src/main/resources/templates/system-open-close.html
+++ b/admin-service/src/main/resources/templates/system-open-close.html
@@ -17,6 +17,8 @@
     <div class="layui-body">
         <!-- 内容主体区域 -->
         <div style="padding: 15px;">
+            <h1>立题选题开放与关闭</h1>
+            <br>
             <table class="layui-table">
                 <thead>
                 <tr>
